# laravel-iam-rust

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/rules/: rule-docmd-docs-sync.md
.claude/skills/docmd-docs/: SKILL.md
.github/workflows/: release.yml  tests.yml
docs-site/: docmd.config.json  package-lock.json  package.json
docs-site/assets/: custom.css
docs-site/docs/: core-concepts.md  index.md  installation.md  quickstart.md
docs-site/docs/.docmd-search/: manifest.json  navigation.json
docs-site/docs/.docmd-search/batches/: 000.json
docs-site/docs/architecture/: check-flow.md  decisions.md  overview.md
docs-site/docs/best-practices/: integration.md  security.md
docs-site/docs/concepts/: fail-closed.md  jwt-verification.md  wire-contract.md
docs-site/docs/guides/: blocking-client.md  checking-decisions.md  fail-closed-patterns.md  listing-resources.md  verifying-tokens.md
docs-site/docs/operations/: configuration.md  troubleshooting.md
docs-site/docs/reference/: api.md  errors.md  types.md
src/: blocking.rs  client.rs  config.rs  error.rs  lib.rs  types.rs  wire.rs
tests/: async_tests.rs  blocking_tests.rs
tests/common/: mod.rs
tests/fixtures/: es256-private.pem  jwks.json
