[package]
name = "laravel-iam"
version = "1.0.1"
edition = "2021"
rust-version = "1.74"
license = "MIT"
description = "Thin, fail-closed Rust client for the Laravel IAM authorization server: remote policy decisions (decisions/check) and OIDC/JWKS token verification."
repository = "https://github.com/padosoft/laravel-iam-rust"
homepage = "https://github.com/padosoft/laravel-iam-rust"
documentation = "https://docs.rs/laravel-iam"
readme = "README.md"
keywords = ["iam", "authorization", "oidc", "rbac", "security"]
categories = ["api-bindings", "authentication", "web-programming::http-client"]

[features]
default = []
# Adds a synchronous client (`laravel_iam::blocking::IamClient`) alongside the async one.
blocking = ["reqwest/blocking"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
base64 = "0.22"
thiserror = "1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
# pkcs8 + pem let the tests load the fixture private key and sign JWTs.
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "std", "pkcs8", "pem"] }

[package.metadata.docs.rs]
all-features = true
